[package]
name = "rustls-cng-crypto"
authors = ["Tom Fay <tom@teamfay.co.uk>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Rustls crypto provider for CNG"
homepage = "https://github.com/tofay/rustls-cng-crypto"
repository = "https://github.com/tofay/rustls-cng-crypto"
readme = "README.md"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Security_Cryptography",
    "Win32_System_WinRT",
] }
foreign-types-shared = { version = "0.1.1", optional = true }
rustls = { version = "0.23.0", default-features = false, features = ["std"] }
rustls-webpki = { version = "0.102.2", default-features = false }
once_cell = "1.8.0"
zeroize = "1.8.1"
openssl = "0.10.68"
openssl-sys = "0.9.104"
pkcs1 = { version = "0.7.5" }
pkcs8 = "0.10.2"
sec1 = "0.7.3"

[features]
default = ["tls12"]
fips = []
tls12 = ["rustls/tls12", "foreign-types-shared"]

[dev-dependencies]
rcgen = { version = "0.13.1", default-features = false, features = [
    "crypto",
    "aws_lc_rs",
    "pem",
] }
aws-lc-rs = { version = "1.11.1", features = ["prebuilt-nasm"] }
hex = "0.4.3"
rstest = "0.23.0"
# Use aws_lc_rs to test our provider
rustls = { version = "0.23.0", features = [
    "aws-lc-rs",
], default-features = false }
rustls-pemfile = "2"
webpki-roots = "0.26"
wycheproof = { version = "0.6.0", default-features = false, features = [
    "aead",
    "hkdf",
    "mac",
    "ecdh",
    "xdh",
] }
